# iterative-improve

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  mutation-nightly.yml  release.yml
ai_checker/: main.py  pyproject.toml
docs/superpowers/plans/: 2026-03-20-ci-workflow-discovery.md
improve/: ci.py  ci_gh.py  ci_glab.py  claude.py  cli.py  color.py  config.py  git.py  mode.py  parallel.py  phases.py  platform.py  process.py  runner.py  state.py  version.py
src/improve/: __init__.py  ci.py  ci_gitlab.py  claude.py  cli.py  color.py  git.py  loop.py  parallel.py  preflight.py  process.py  prompt.py  state.py  version.py
tests/: __init__.py  conftest.py  test_architecture.py  test_ci.py  test_ci_gh.py  test_ci_gitlab.py  test_ci_glab.py  test_claude.py  test_cli.py  test_color.py  test_config.py  test_git.py  test_integration.py  test_loop.py  test_mode.py  test_parallel.py  test_phases.py  test_platform.py  test_preflight.py  test_process.py  test_prompt.py  test_runner.py  test_state.py  test_version.py
