[project]
name = "iterative-improve"
version = "0.1.0"
description = "Iterative code improvement loop using Claude and CI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
iterative-improve = "improve.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/improve"]

[tool.ruff]
line-length = 100
target-version = "py310"
